tests/snapshots/integration__integration_tests__config_show__deprecated_config_deleted_shows_regenerate_hint.snap
---
source: tests/integration_tests/config_show.rs
info:
  program: wt
  args:
    - list
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    MOCK_CONFIG_DIR: "[MOCK_CONFIG_DIR]"
    PATH: "[PATH]"
    RUST_LOG: warn
    SHELL: ""
    SOURCE_DATE_EPOCH: "1735776000"
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----
  [1mBranch[0m     [1mStatus[0m        [1mHEAD±[0m    [1mmain↕[0m  [1mPath[0m               [1mRemote⇅[0m  [1mCommit[0m    [1mAge[0m   [1mMessage
@ main         [36m?[39m [2m^[22m[2m|[22m                        .                     [2m|[0m     [2m05a4a45d[0m  [2m16h[0m   [2mInitial commit
+ feature-a      [2m↑[22m                 [32m↑1[0m      ../repo.feature-a           [2m1b87d473[0m  [2m16h[0m   [2mAdd feature-a file
+ feature-b      [2m↑[22m                 [32m↑1[0m      ../repo.feature-b           [2mf62940fc[0m  [2m16h[0m   [2mAdd feature-b file
+ feature-c      [2m↑[22m                 [32m↑1[0m      ../repo.feature-c           [2m345c7c93[0m  [2m16h[0m   [2mAdd feature-c file

[2m○[22m [2mShowing 4 worktrees, 1 with changes, 3 ahead

----- stderr -----
[33m▲[39m [33mProject config uses deprecated template variables: [2mmain_worktree[22m → [1mrepo[22m[39m
[2m↳[22m [2mTo regenerate, rerun after [90mwt config state hints clear deprecated-project-config[39m[22m
